# lstc-gait

./: .gitignore  .pre-commit-config.yaml  README.md  README_zh.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  sweep.yml
configs/: casia_b.yaml  metric.yaml  multiview_metric.yaml  multiview_real.yaml  ou_mvlp.yaml  real.yaml
docs/: README.md
docs/comparison/: lstc_vs_3d_local_cnn.md
docs/eval/: protocols.md
docs/reports/: template.md
docs/theory/: lstc_lstp.md
examples/: dataset_casia_b.py  dataset_multiview.py  dataset_ou_mvlp.py  dataset_silhouette.py  eval_casia_b.py  eval_ou_mvlp.py  eval_retrieval.py  eval_retrieval_multiview.py  extract_embeddings.py  gen_toy_dataset.py  run_ablation.py  run_casia_b_pipeline.py  run_ou_mvlp_pipeline.py  run_sweep.py  sanity_check.py  train_casia_b.py  train_metric.py  train_metric_multiview.py  train_ou_mvlp.py  train_real.py  train_real_multiview.py  train_toy.py
lstc/: __init__.py  cli.py  losses.py  model.py  modules.py  samplers.py  utils.py
notebooks/: quick_start.ipynb  quick_start_safe.ipynb
scripts/: ci_check_onnx.py  ci_check_ts.py
tests/: test_modules.py  test_samplers.py  test_toy_training.py
