[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lstc-gait"
version = "0.1.0"
description = "Local Spatio-Temporal Convolution/Pooling for Gait Recognition"
authors = [{ name = "LSTC Authors" }]
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "Pillow>=10",
  "tensorboard>=2.14",
  "omegaconf==2.1.2",
  "antlr4-python3-runtime==4.8",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["lstc*"]
exclude = ["tests*", "examples*", "docs*", "notebooks*", "configs*", "scripts*"]

[project.scripts]
lstc = "lstc.cli:main"

## Ruff removed per user request

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = false
warn_redundant_casts = false
warn_unused_configs = false
check_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
python_files = ["test_*.py"]
pythonpath = ["."]
